--- a/mbp/templates/base.html
+++ b/mbp/templates/base.html
@@ -50,10 +50,8 @@
 
 <div class="container theme-showcase" role="main">
 
-    { % include
-    'flash.html' %}
-    { % block
-    content %}{ % endblock %}
+    {% include 'flash.html' %}
+    {% block content %}{% endblock %}
 
 </div>
 <!-- /container -->
