--- a/mbp/templates/_formhelper.html
+++ b/mbp/templates/_formhelper.html
@@ -1,5 +1,5 @@
 {% macro render_field(field) -%}
-{% set with_lable=False %}
+{% set with_label=kwargs.pop('with_label',False) %}
 {% set placeholder = field.label.text %}
 
 <div class="form-group {% if field.errors %}error{% endif %}">
@@ -16,7 +16,8 @@
 
         {% else %}
         <label for="{{ field.id }}" class="col-sm-2 control-label ">
-            {% if with_lable %}{{ field.label.text }}{% if field.flags.required %} *{% endif %}:{% endif %}
+            {% if with_label %}{{ field.label.text }}{% if field.flags.required %}<span
+                class="label label-danger small"> *</span>{% endif %}:{% endif %}
         </label>
 
         <div class="col-sm-10">
@@ -37,4 +38,4 @@
             {% endif %}
         </div>
     </div>
-    {%- endmacro %}
+{%- endmacro %}
