--- a/mbp/templates/WechatUserSendcode.html
+++ b/mbp/templates/WechatUserSendcode.html
@@ -6,28 +6,18 @@
 
 {% block content %}
 <div class="well well-large">
-
-    <form class="form-horizontal form-signin" role="form" action="" method="post">
-        <h2 class="form-signin-heading center">绑定账户</h2>
+    <form class="form-inline form-signin" role="form" action="" method="post">
         {{ form.hidden_tag() }}
+        <h2 class="form-signin-heading">绑定账户 1/2</h2>
 
-        <div class="input-group">
-
-            <input type="text" id="usercode" name="usercode" class="form-control" placeholder="请输入门户账户">
-
+        <div class="form-group">
+            <label class="sr-only" for="usercode">请输入门户账户</label>
+            <input type="text" class="form-control" id="usercode" name="usercode" placeholder="请输入门户账户">
         </div>
-
-        <br>
-        <div class="input-group">
-            <div class="col-sm-offset-4 col-sm-8">
-                <button type="submit" class="btn btn-success">获取验证码</button>
-            </div>
-        </div>
-        <br>
-        <div class="alert alert-success">请输入门户账户, 验证码会发送到您的邮箱
-
-        </div>
+        <button type="submit" class="btn btn-success">获取验证码</button>
     </form>
+    <div class="alert alert-success">请输入门户账户, 验证码会发送到您的手机
+    </div>
 </div>
 
 
