--- a/mbp/templates/login.html
+++ b/mbp/templates/login.html
@@ -5,7 +5,7 @@
 <div class="well well-large">
     <form class="form-inline form-signin" role="form" action="{{url_for(action,**request.args)}}" method="post">
         {{ form.hidden_tag() }}
-        <h2 class="form-signin-heading">登录系统</h2>
+        <h2 class="form-signin-heading">登录系统 1/2</h2>
         <div class="form-group">
             <label class="sr-only" for="usercode">请输入门户账户</label>
             <input type="text" class="form-control" id="usercode" name="usercode" placeholder="请输入门户账户">
