--- a/mbp/templates/msg.html
+++ b/mbp/templates/msg.html
@@ -5,7 +5,7 @@
 <div class="well well-large">
     <div class="alert alert-success">
 
-       <h1> <strong>{{msg}}</strong></h1>
+       <h3> {{msg}}</h3>
 
     </div>
 
