完成系统雏形

--- a/mbp/templates/base.html
+++ b/mbp/templates/base.html
@@ -36,9 +36,11 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('unchecked') }}">待查资产</a></li>
-                <li><a href="{{ url_for('checked') }}">已查资产</a></li>
-                <li><a href="{{ url_for('barcodelist') }}">清查日志</a></li>
+                <li {%if request.endpoint=='unchecked' %}class="active"{%endif%}><a href="{{ url_for('unchecked') }}">待查资产</a></li>
+                <li
+                {%if request.endpoint=='checked' %}class="active"{%endif%}><a href="{{ url_for('checked') }}">已查资产</a></li>
+                <li
+                {%if request.endpoint=='barcodelist' %}class="active"{%endif%}><a href="{{ url_for('barcodelist') }}">清查日志</a></li>
 
                 {% if g.user.is_authenticated() %}
                 <li><a href="{{ url_for('logout') }}">注销登陆</a></li>
