--- a/mbp/templates/showzcbq.html
+++ b/mbp/templates/showzcbq.html
@@ -49,7 +49,7 @@
     </button>
     <ul class="dropdown-menu" role="menu">
         {%for x in child%}
-        <li><a href="/showzc/{{x.zcbqh}}">
+        <li><a href="/showzc/?zcbh={{x.zcbqh}}">
             <span class="label label-primary">{{x.zcbqh}}</span>
             <span class="label label-success">{{x.swmc}}</span>
             <span class="label label-info">{{x.ggxh}}</span>
