--- a/mbp/templates/yicha.html
+++ b/mbp/templates/yicha.html
@@ -2,10 +2,14 @@
 {% extends "base.html" %}
 {% from "_paginathion.html" import pagination_html %}
 {% from "_listview.html" import listview %}
-{% block content %}
 
+{% block content %}
+<a href="{{url_for('excel',type='checked')}}" >导出到Excel</a>
 <!----显示表格---->
 {{ listview(pagination,fields,fields_cn,specfile,formater) }}
 <!-- 调用分页模板 -->
 {{ pagination_html(pagination, request.endpoint, request.query_string) }}
 {% endblock %}
+
+
+
