--- a/mbp/templates/base.html
+++ b/mbp/templates/base.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-    <title>{{ title }} - 查询系统</title>
+    <title>{{ title }} - 基于微信的资产管理系统</title>
     {% else %}
-    <title>查询系统</title>
+    <title>基于微信的资产管理系统</title>
     {% endif %}
     <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
     <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
@@ -16,7 +16,9 @@
     <!--[if lte IE 6]>
     <link rel="stylesheet" href="/static/css/ie6.css"/>
     <![endif]-->
-
+    <script type=text/javascript>
+        $SCRIPT_ROOT={{request.script_root|tojson|safe}};
+    </script>
 
 </head>
 <body>
