增加代理商的程序

--- a/dls/templates/index.html
+++ b/dls/templates/index.html
@@ -6,7 +6,8 @@
     <div class="container">
         <div class="row">
 
-        欢迎您:{{uinfo.chnl_name}}
+            欢迎您:{{uinfo.chnl_name}}<br>
+            当前工号:{{uinfo.staff_id}}
          </div>
 
         </div>
