--- a/dls/templates/login.html
+++ b/dls/templates/login.html
@@ -12,7 +12,7 @@
         </div>
         <button type="submit" class="btn btn-success">获取验证码</button>
     </form>
-    <div class="alert alert-success">请输入营业工号, 验证码会发送到您的手机
+    <div class="alert alert-success">请输入营业工号, 验证码会发送到您的返档手机号
     </div>
 </div>
 {% endblock %}
