--- a/dls/templates/base.html
+++ b/dls/templates/base.html
@@ -9,16 +9,15 @@
     {% else %}
     <title>基于微信的代理商信息系统</title>
     {% endif %}
-    <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
-    <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+
+    <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}">
     <!--[if lte IE 6]>
     <link rel="stylesheet" href="/static/css/ie6.css"/>
     <![endif]-->
-    <script type=text/javascript>
-        $SCRIPT_ROOT={{request.script_root|tojson|safe}};
-    </script>
+
 
 </head>
 <body>
@@ -53,7 +52,6 @@
 {%include 'flash.html' %}
 {% block content %}{% endblock %}
 </div>
-
 
 </body>
 </html>
