--- a/dls/templates/showsnlist.html
+++ b/dls/templates/showsnlist.html
@@ -4,28 +4,63 @@
 {% from "_formhelper.html" import render_field %}
 {% from "_listview.html" import listview %}
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='datetime/css/bootstrap-datetimepicker.css') }}">
-<script src="{{ url_for('static', filename='datetime/js/bootstrap-datetimepicker.min.js') }}"></script>
-<script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='datetime/js/bootstrap-datetimepicker.zh-CN.js') }}"></script>
+<link rel="stylesheet" media="screen" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
+<link rel="stylesheet" media="screen" href="{{ url_for('static', filename='datetime/css/bootstrap-datetimepicker.min.css') }}">
 
-<form class="form-inline form-signin" role="form" action="{{url_for(action,**request.args)}}" method="post">
-    {{ form.hidden_tag() }}
-    <div class="input-append date" id="datetimepicker" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
-        <input class="span2" size="16" type="text" value="12-02-2012">
-        <span class="add-on"><i class="icon-remove"></i></span>
-        <span class="add-on"><i class="icon-th"></i></span>
-    </div>
+<div class="container">
+    <form  role="form" action="{{url_for(action)}}" method="post">
+        {{ form.hidden_tag() }}
 
 
-    <button type="submit" class="btn btn-success">应用</button>
-</form>
+            <div class="form-group">
+                <label for="startdate" class="col-md-1 control-label">起始时间</label>
+                <div class="input-group date form_date col-md-3" data-date="" data-date-format="yyyy-mm-dd"
+                     data-link-field="startdate" data-link-format="yyyy-mm-dd">
+                    <input class="form-control" size="16" type="text" value="{{request.args.get('s')}}" placeholder="起始时间" readonly>
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                </div>
+                <input type="hidden" id="startdate" name="startdate" value="{{request.args.get('s')}}"/><br/>
+            </div>
+        <div class="form-group">
+            <label for="startdate" class="col-md-1 control-label">结束时间</label>
+
+            <div class="input-group date form_date col-md-3" data-date="" data-date-format="yyyy-mm-dd"
+                 data-link-field="enddate" data-link-format="yyyy-mm-dd">
+                <input class="form-control" size="16" type="text" value="{{request.args.get('e')}}" placeholder="结束时间" readonly>
+                <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+            </div>
+            <input type="hidden" id="enddate" name="enddate" value="{{request.args.get('e')}}"/><br/>
+        </div>
+
+        <button type="submit" class="btn btn-success">应用</button>
+    </form>
+</div>
+
+
+
+
 <!----显示表格---->
 {{ listview(pagination,fields,fields_cn,specfile,formater) }}
 <!-- 调用分页模板 -->
 {{ pagination_html(pagination, request.endpoint, request.query_string) }}
 
-        <script >
+<script type="text/javascript" src="{{ url_for('static', filename='datetime/js/bootstrap-datetimepicker.js') }}" charset="UTF-8"></script>
+<script type="text/javascript" charset="UTF-8"
+        src="{{ url_for('static', filename='datetime/js/locales/bootstrap-datetimepicker.zh-CN.js') }}"></script>
 
-            $('#datetimepicker').datetimepicker();
-        </script>
+<script>
+
+    $('.form_date').datetimepicker({
+        language: 'zh-CN',
+        weekStart: 1,
+        todayBtn: 1,
+        autoclose: 1,
+        todayHighlight: 1,
+        startView: 2,
+        minView: 2,
+        forceParse: 0
+    });
+</script>
 {% endblock %}
