--- a/dls/templates/showsnlist.html
+++ b/dls/templates/showsnlist.html
@@ -39,12 +39,23 @@
 </div>
 
 
+<ul class="nav nav-tabs">
+    <li
+    {%if request.args.get('t')=='list' %}class="active"{%endif%} ><a href="?s={{request.args.get('s')}}&e={{request.args.get('e')}}&t=list">列表</a></li>
+    <li
+    {%if request.args.get('t')=='group' %}class="active"{%endif%}><a href="?s={{request.args.get('s')}}&e={{request.args.get('e')}}&t=group">统计</a></li>
+   
+</ul>
 
 
 <!----显示表格---->
 {{ listview(pagination,fields,fields_cn,specfile,formater) }}
 <!-- 调用分页模板 -->
 {{ pagination_html(pagination, request.endpoint, request.query_string) }}
+
+
+<!----显示表格---->
+{{ listview(groupdata,gfields,gfields_cn) }}
 
 <script type="text/javascript" src="{{ url_for('static', filename='datetime/js/bootstrap-datetimepicker.js') }}" charset="UTF-8"></script>
 <script type="text/javascript" charset="UTF-8"
