--- a/dls/templates/base.html
+++ b/dls/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-cn" data-lang="zh-cn" data-template="simple" class="lang-zh-cn">
 <head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='pace/pace.css') }}">
+    <script src="{{ url_for('static', filename='pace/pace.min.js') }}"></script>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +12,17 @@
     <title>基于微信的代理商信息系统</title>
     {% endif %}
 
-    <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+
+    <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+
 
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}">
     <!--[if lte IE 6]>
     <link rel="stylesheet" href="/static/css/ie6.css"/>
     <![endif]-->
+
 
 
 </head>
